testsuite/tests/typecheck/should_fail/tcfail133.stderr

tcfail133.hs:2:61: warning:
    -XDatatypeContexts is deprecated: It was widely considered a misfeature, and has been removed from the Haskell language.

tcfail133.hs:68:7: error:
    No instance for (Show r0) arising from a use of ‘show’
    The type variable ‘r0’ is ambiguous
    Potential instances:
      instance Show Ordering -- Defined in ‘GHC.Show’
      instance Show Integer -- Defined in ‘GHC.Show’
      instance (Show a, Show b, Number a, Digit b) => Show (a :@ b)
        -- Defined at tcfail133.hs:11:54
      ...plus 25 others
      (use -fprint-potential-instances to see them all)
    In the expression: show
    In the expression: show $ add (One :@ Zero) (One :@ One)
    In an equation for ‘foo’:
        foo = show $ add (One :@ Zero) (One :@ One)

tcfail133.hs:68:14: error:
    No instance for (AddDigit (Zero :@ (One :@ One)) One r0)
      arising from a use of ‘add’
    In the second argument of ‘($)’, namely
      ‘add (One :@ Zero) (One :@ One)’
    In the expression: show $ add (One :@ Zero) (One :@ One)
    In an equation for ‘foo’:
        foo = show $ add (One :@ Zero) (One :@ One)
